# PCorr-main

./: README.md  app.py  pyproject.toml
data/: sunspot.csv
pcorr/: gamma.py  process_file.py
pcorr/gui/: main.py
pcorr/gui/ui/: about.qml  headers.qml  main.qml  preview.qml  result.qml
