[tool.poetry]
name = "pcorr"
version = "0.1.0"
description = ""
authors = ["Ificiana <ificiana@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pyside6 = "^6.7.1"
pandas = "^2.2.2"
scipy = "^1.13.1"
pyside6-utils = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gui = "pcorr.gui.main:run_app"